--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 body {
-  background: url(./image/coffee-apple.jpg) no-repeat center center fixed;
-  -webkit-background: cover;
-  -moz-background: cover;
-  -o-background: cover;
-  background: cover;
+  background: url(./image/Background2.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
 }
