--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 body {
-  background: url(./image/Background2.jpg) no-repeat center center fixed;
+  background: url(./image/Background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
 }
